--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.6.1",
+    "@material-ui/pickers": "^3.2.8",
     "@material-ui/styles": "^4.7.1",
     "classnames": "^2.2.6",
+    "date-fns": "^2.8.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
